blog/blog-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app: blog-app
  name: blog-app
  namespace: blog
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: blog-app
      app: blog-app
  template:
    metadata:
      labels:
        io.kompose.service: blog-app
        app: blog-app
    spec:
      containers:
        - image: ghcr.io/davidcode2/blog:1.0.4
          name: blog-app
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
